--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.12",
     "firebase": "^8.2.4",
     "flatpickr": "^4.5.1",
+    "mdbvue": "^6.7.2",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
