--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.2",
     "vue-stack-grid": "^1.2.2",
+    "vue-virtual-grid": "^2.3.1",
     "vue2-transitions": "^0.2.3",
     "vuex": "^3.6.0",
     "vuex-persist": "^3.1.3"
