--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@southbanksoftware/provendb-node-driver": "^0.1.13",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
@@ -15,6 +16,7 @@
     "firebase": "^8.2.4",
     "flatpickr": "^4.5.1",
     "mdbvue": "^6.7.2",
+    "mongodb": "^3.6.5",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
