--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
     "@southbanksoftware/provendb-node-driver": "^0.1.13",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^2.6.12",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.2.4",
     "flatpickr": "^4.5.1",
     "mdbvue": "^6.7.2",
     "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2",
+    "nodemon": "^2.0.7",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
