--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_CONNECTION1 = mongo mongodb://imago-admin:capstone@imago-bc.provendb.io/imago-bc?ssl=true
-DB_CONNECTION2 = mongodb+srv://imago-admin:capstone@cluster0.1vhur.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECTION2 = mongodb+srv://imago-admin:capstone@cluster0.1vhur.mongodb.net/imago-bc?retryWrites=true&w=majority
 
 DB_NAME=imago-bc
