--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^8.2.4",
     "flatpickr": "^4.5.1",
     "mdbvue": "^6.7.2",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
