--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
-  "name": "vue-argon-design-system",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "nodemon src/server.js"
-  },
-  "dependencies": {
-    "@southbanksoftware/provendb-node-driver": "^0.1.13",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^2.6.12",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "firebase": "^8.2.4",
-    "flatpickr": "^4.5.1",
-    "mdbvue": "^6.7.2",
-    "moment": "^2.29.1",
-    "mongodb": "^3.6.5",
-    "mongoose": "^5.12.2",
-    "nodemon": "^2.0.7",
-    "nouislider": "^11.1.0",
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.6.6",
-    "vue-axios": "^3.2.2",
-    "vue-burger-menu": "^2.0.5",
-    "vue-flatpickr-component": "^8.1.1",
-    "vue-lazyload": "^1.2.6",
-    "vue-masonry": "^0.12.0",
-    "vue-material": "^1.0.0-beta-15",
-    "vue-multiselect": "^2.1.6",
-    "vue-router": "^3.0.2",
-    "vue-sidebar-menu": "^4.7.4",
-    "vue-simple-alert": "^1.1.1",
-    "vue-stack-grid": "^1.2.2",
-    "vue-virtual-grid": "^2.3.1",
-    "vue2-datepicker": "^3.9.0",
-    "vue2-transitions": "^0.2.3",
-    "vuex": "^3.6.0",
-    "vuex-persist": "^3.1.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-service": "^4.5.11",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.6"
-  }
+    "name": "vue-argon-design-system",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "start": "nodemon src/server.js"
+    },
+    "dependencies": {
+        "@southbanksoftware/provendb-node-driver": "^0.1.13",
+        "axios": "^0.21.1",
+        "body-parser": "^1.19.0",
+        "bootstrap": "^4.6.0",
+        "bootstrap-vue": "^2.21.2",
+        "chart.js": "^2.9.4",
+        "core-js": "^2.6.12",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "firebase": "^8.2.4",
+        "flatpickr": "^4.5.1",
+        "mdbvue": "^6.7.2",
+        "moment": "^2.29.1",
+        "mongodb": "^3.6.5",
+        "mongoose": "^5.12.2",
+        "nodemon": "^2.0.7",
+        "nouislider": "^11.1.0",
+        "register-service-worker": "^1.5.2",
+        "vue": "^2.6.6",
+        "vue-axios": "^3.2.2",
+        "vue-burger-menu": "^2.0.5",
+        "vue-chartkick": "0.6.1",
+        "vue-flatpickr-component": "^8.1.1",
+        "vue-lazyload": "^1.2.6",
+        "vue-masonry": "^0.12.0",
+        "vue-material": "^1.0.0-beta-15",
+        "vue-multiselect": "^2.1.6",
+        "vue-router": "^3.0.2",
+        "vue-sidebar-menu": "^4.7.4",
+        "vue-simple-alert": "^1.1.1",
+        "vue-stack-grid": "^1.2.2",
+        "vue-virtual-grid": "^2.3.1",
+        "vue2-datepicker": "^3.9.0",
+        "vue2-transitions": "^0.2.3",
+        "vuex": "^3.6.0",
+        "vuex-persist": "^3.1.3"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.4.0",
+        "@vue/cli-plugin-eslint": "^3.4.0",
+        "@vue/cli-plugin-pwa": "^3.4.0",
+        "@vue/cli-service": "^4.5.11",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.3.1",
+        "vue-template-compiler": "^2.6.6"
+    }
 }
