--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "vue-cli-service serve --puclic 0.0.0.0:8080",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "start": "nodemon src/server.js"
