--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.17.1",
         "firebase": "^8.2.4",
         "flatpickr": "^4.5.1",
+        "jspdf": "^2.3.1",
         "mdbvue": "^6.7.2",
         "moment": "^2.29.1",
         "mongodb": "^3.6.5",
