--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve --puclic 0.0.0.0:8080",
+        "serve": "vue-cli-service serve --public 0.0.0.0:8080",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "start": "nodemon src/server.js"
@@ -33,6 +33,7 @@
         "vue-axios": "^3.2.2",
         "vue-burger-menu": "^2.0.5",
         "vue-chartkick": "0.6.1",
+        "vue-cover-gallery": "^1.0.7",
         "vue-flatpickr-component": "^8.1.1",
         "vue-it-bigger": "^0.2.2",
         "vue-lazyload": "^1.2.6",
@@ -42,6 +43,7 @@
         "vue-material": "^1.0.0-beta-15",
         "vue-multiselect": "^2.1.6",
         "vue-my-toasts": "^1.1.1",
+        "vue-responsive-dash": "^0.5.0",
         "vue-router": "^3.0.2",
         "vue-rx": "^6.2.0",
         "vue-sidebar-menu": "^4.7.4",
