--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "vue-material": "^1.0.0-beta-15",
         "vue-multiselect": "^2.1.6",
         "vue-my-toasts": "^1.1.1",
+        "vue-notification-bell": "^0.8.14",
         "vue-responsive-dash": "^0.5.0",
         "vue-router": "^3.0.2",
         "vue-rx": "^6.2.0",
