--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "chart.js": "^2.9.4",
+        "connect": "^3.7.0",
         "core-js": "^2.6.12",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
@@ -30,6 +31,7 @@
         "nouislider": "^11.1.0",
         "register-service-worker": "^1.5.2",
         "rxjs": "^6.6.7",
+        "socket.io": "^4.0.1",
         "vue": "^2.6.12",
         "vue-axios": "^3.2.2",
         "vue-burger-menu": "^2.0.5",
@@ -67,5 +69,11 @@
         "node-sass": "^4.11.0",
         "sass-loader": "^7.3.1",
         "vue-template-compiler": "^2.6.6"
+    },
+    "config": {
+        "nuxt": {
+            "host": "0.0.0.0",
+            "port": "3000"
+        }
     }
 }
