--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@kouts/vue-modal": "^2.0.10",
         "@southbanksoftware/provendb-node-driver": "^0.1.13",
         "axios": "^0.21.1",
+        "axios-jsonp": "^1.0.4",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
