--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
         "vue2-datepicker": "^3.9.0",
         "vue2-transitions": "^0.2.3",
         "vuex": "^3.6.0",
-        "vuex-persist": "^3.1.3"
+        "vuex-persist": "^3.1.3",
+        "yaml": "^1.10.2"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.4.0",
